--- a/package.json
+++ b/package.json
@@ -77,12 +77,14 @@
     "@types/react-dom": "^18.2.13",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
+    "drizzle-dbml-generator": "^0.4.0",
     "drizzle-kit": "^0.19.13",
     "eslint": "^8.51.0",
     "eslint-config-next": "13.5.4",
     "mysql2": "^3.6.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
     "tsx": "^3.13.0",
     "typescript": "^5.2.2"
   }
