--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "pnpm exec prettier --write . --config prettier.config.mjs",
     "db:generate": "drizzle-kit generate:mysql",
     "db:migrate": "tsx src/lib/db/migrate.ts",
     "db:drop": "drizzle-kit drop",
@@ -85,6 +86,8 @@
     "eslint-config-next": "13.5.4",
     "mysql2": "^3.6.1",
     "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "tsx": "^3.13.0",
