--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,12 @@
 {
   "extends": "next/core-web-vitals",
+  "plugins": ["@typescript-eslint/eslint-plugin"],
+  "parser": "@typescript-eslint/parser",
   "rules": {
     "no-console": ["warn"],
-    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
+    ]
   }
 }
