--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.28.6",
     "drizzle-zod": "^0.5.1",
@@ -77,6 +78,7 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.2",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
