--- a/package.json
+++ b/package.json
@@ -51,7 +51,11 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.7.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "@trpc/client": "^10.40.0",
     "@trpc/next": "^10.40.0",
     "@trpc/react-query": "^10.40.0",
