--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "superjson": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "3.22.4"
+    "zod": "3.22.4",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.2",
