feat: updates to secret editing

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth/drizzle-adapter": "^0.3.3",
     "@formkit/auto-animate": "^0.8.0",
     "@hookform/resolvers": "^3.3.2",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
