--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@auth/drizzle-adapter": "^0.3.3",
     "@formkit/auto-animate": "^0.8.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mantine/core": "^7.1.5",
+    "@mantine/hooks": "^7.1.5",
+    "@mantine/tiptap": "^7.1.5",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -55,6 +58,7 @@
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
+    "@tiptap/extension-link": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
@@ -88,6 +92,7 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.5.6",
     "@types/crypto-js": "^4.1.2",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.28",
@@ -102,6 +107,8 @@
     "eslint-config-next": "13.5.4",
     "mysql2": "^3.6.1",
     "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.9.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.3",
