--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,13 @@
 {
-  "extends": "next/core-web-vitals",
-  "plugins": ["@typescript-eslint/eslint-plugin"],
+  "extends": ["next/core-web-vitals", "plugin:jsx-a11y/recommended"],
+  "plugins": ["@typescript-eslint/eslint-plugin", "jsx-a11y"],
   "parser": "@typescript-eslint/parser",
   "rules": {
     "no-console": ["warn"],
     "@typescript-eslint/no-unused-vars": [
       "warn",
       { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
-    ]
+    ],
+    "jsx-a11y/no-autofocus": "off"
   }
 }
