--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@auth/core": "^0.16.1",
     "@auth/drizzle-adapter": "^0.3.3",
+    "@defer/client": "^1.13.0",
     "@formkit/auto-animate": "^0.8.0",
     "@hookform/resolvers": "^3.3.2",
     "@mantine/core": "^7.1.5",
