feat: updates and middleware updates

--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "@auth/drizzle-adapter": "^0.3.3",
     "@defer/client": "^1.13.0",
     "@formkit/auto-animate": "^0.8.0",
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
-    "@mantine/core": "^7.1.5",
-    "@mantine/hooks": "^7.1.5",
-    "@mantine/tiptap": "^7.1.5",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-accordion": "^1.1.2",
