--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.28.6",
     "drizzle-zod": "^0.5.1",
+    "geist": "^1.0.0",
     "lucide-react": "^0.286.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
