--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@formkit/auto-animate": "^0.8.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@lemonsqueezy/lemonsqueezy.js": "^1.2.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-accordion": "^1.1.2",
