--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@formkit/auto-animate": "^0.8.1",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@internationalized/date": "^3.5.0",
     "@lemonsqueezy/lemonsqueezy.js": "^1.2.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.11.0",
@@ -56,7 +57,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "^0.0.11",
     "@react-email/render": "^0.0.9",
-    "@rive-app/react-canvas": "^4.5.1",
+    "@rive-app/react-canvas": "^4.5.3",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
@@ -64,10 +65,10 @@
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
-    "@trpc/client": "^10.43.1",
-    "@trpc/next": "^10.43.1",
-    "@trpc/react-query": "^10.43.1",
-    "@trpc/server": "^10.43.1",
+    "@trpc/client": "^10.43.3",
+    "@trpc/next": "^10.43.3",
+    "@trpc/react-query": "^10.43.3",
+    "@trpc/server": "^10.43.3",
     "@uploadthing/react": "^5.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -76,19 +77,21 @@
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.28.6",
     "drizzle-zod": "^0.5.1",
-    "geist": "^1.0.1",
+    "geist": "^1.1.0",
     "lucide-react": "^0.286.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18.2.0",
+    "react-aria": "^3.30.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-email": "^1.9.5",
     "react-hook-form": "^7.48.2",
+    "react-stately": "^3.28.0",
     "resend": "^2.0.0",
     "slugify": "^1.6.6",
     "sonner": "^1.2.0",
-    "superjson": "^2.2.0",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.4",
@@ -112,7 +115,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "mysql2": "^3.6.3",
     "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.9.1",
+    "postcss-preset-mantine": "^1.10.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
