--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "^0.0.11",
     "@react-email/render": "^0.0.9",
+    "@react-spring/web": "^9.7.3",
     "@rive-app/react-canvas": "^4.5.3",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tailwindcss/typography": "^0.5.10",
