--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-hook-form": "^7.48.2",
     "react-stately": "^3.28.0",
     "resend": "^2.0.0",
+    "sharp": "^0.32.6",
     "slugify": "^1.6.6",
     "sonner": "^1.2.0",
     "superjson": "^2.2.1",
@@ -105,8 +106,8 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "drizzle-dbml-generator": "^0.4.0",
@@ -118,7 +119,7 @@
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.11.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
     "ts-node": "^10.9.1",
