--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
     "@internationalized/date": "^3.5.0",
-    "@lemonsqueezy/lemonsqueezy.js": "^1.2.1",
+    "@lemonsqueezy/lemonsqueezy.js": "^1.2.2",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@plaiceholder/next": "^3.0.0",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -66,10 +67,10 @@
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
-    "@trpc/client": "^10.43.3",
-    "@trpc/next": "^10.43.3",
-    "@trpc/react-query": "^10.43.3",
-    "@trpc/server": "^10.43.3",
+    "@trpc/client": "^10.43.6",
+    "@trpc/next": "^10.43.6",
+    "@trpc/react-query": "^10.43.6",
+    "@trpc/server": "^10.43.6",
     "@uploadthing/react": "^5.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -82,6 +83,7 @@
     "lucide-react": "^0.286.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "plaiceholder": "^3.0.0",
     "react": "^18.2.0",
     "react-aria": "^3.30.0",
     "react-day-picker": "^8.9.1",
@@ -97,13 +99,14 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.4",
+    "use-scramble": "^2.2.12",
     "zod": "3.22.4",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.5.6",
     "@types/crypto-js": "^4.2.1",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
@@ -112,7 +115,7 @@
     "dotenv": "^16.3.1",
     "drizzle-dbml-generator": "^0.4.0",
     "drizzle-kit": "^0.19.13",
-    "eslint": "^8.53.0",
+    "eslint": "^8.54.0",
     "eslint-config-next": "13.5.4",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "mysql2": "^3.6.3",
