feat: migrated to new speed insights

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@trpc/react-query": "^10.44.1",
     "@trpc/server": "^10.44.1",
     "@uploadthing/react": "^6.0.2",
+    "@vercel/speed-insights": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
