fix: updates and fixed builds

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.16.1",
-    "@auth/drizzle-adapter": "^0.3.12",
+    "@auth/drizzle-adapter": "^0.3.13",
     "@defer/client": "^1.14.1",
     "@dotlottie/react-player": "^1.6.12",
     "@formkit/auto-animate": "^0.8.1",
@@ -84,7 +84,8 @@
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.28.6",
     "drizzle-zod": "^0.5.1",
-    "embla-carousel-react": "8.0.0-rc17",
+    "embla-carousel-react": "8.0.0-rc18",
+    "framer-motion": "^10.17.9",
     "geist": "^1.2.0",
     "lucide-react": "^0.286.0",
     "next": "14.0.4",
@@ -125,6 +126,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "13.5.4",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "lemonsqueezy.js": "link:@types/@lemonsqueezy/lemonsqueezy.js",
     "mysql2": "^3.6.5",
     "postcss": "^8.4.33",
     "postcss-simple-vars": "^7.0.1",
