--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
+    "@tsparticles/engine": "^3.1.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.1.0",
     "@uploadthing/react": "^6.1.0",
     "@vercel/speed-insights": "^1.0.2",
     "class-variance-authority": "^0.7.0",
