--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "react-stately": "^3.29.0",
     "resend": "^2.1.0",
     "sharp": "^0.32.6",
+    "simplex-noise": "^4.0.1",
     "slugify": "^1.6.6",
     "sonner": "^1.3.1",
     "superjson": "^2.2.1",
