--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^4.6.0",
     "dotenv": "^16.3.1",
     "drizzle-dbml-generator": "^0.4.0",
     "drizzle-kit": "^0.19.13",
